Fixing z-index issue with background

--- a/src/components/navbar/index.module.scss
+++ b/src/components/navbar/index.module.scss
@@ -37,5 +37,6 @@
     position: fixed;
     top: 40px;
     left: 0;
+    z-index: 9000;
   } 
 }
